chore: start of mcp-gateway functionality (+ basic feature-flagging system) (#753)

--- a/platform/.env.example
+++ b/platform/.env.example
@@ -37,3 +37,6 @@ ARCHESTRA_ANALYTICS=
 ARCHESTRA_AUTH_SECRET=
 ARCHESTRA_AUTH_ADMIN_EMAIL=admin@example.com
 ARCHESTRA_AUTH_ADMIN_PASSWORD=password
+
+# Feature Flags
+FEATURES_MCP_GATEWAY_ENABLED=false
