--- a/platform/backend/package.json
+++ b/platform/backend/package.json
@@ -31,6 +31,7 @@
     "@fastify/swagger": "^9.5.2",
     "@google/genai": "^1.24.0",
     "@shared": "workspace:*",
+    "@socotra/modelcontextprotocol-sdk": "^1.20.1",
     "ai": "^5.0.57",
     "better-auth": "^1.3.27",
     "dotenv": "^17.2.2",
@@ -38,6 +39,7 @@
     "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.8.3",
     "fastify": "^5.6.1",
+    "fastify-mcp": "^2.0.8",
     "fastify-plugin": "^5.1.0",
     "fastify-type-provider-zod": "^6.0.0",
     "lodash": "^4.17.21",
