--- a/platform/frontend/package.json
+++ b/platform/frontend/package.json
@@ -20,6 +20,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -43,6 +44,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "ai": "^5.0.76",
     "better-auth": "^1.3.27",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -56,11 +58,14 @@
     "next-themes": "^0.4.6",
     "posthog-js": "^1.279.3",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.3.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.65.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.6",
+    "recharts": "^3.3.0",
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-breaks": "^4.0.0",
