feat: vault-aws-iam (#1387)

--- a/platform/.env.example
+++ b/platform/.env.example
@@ -109,7 +109,7 @@ ARCHESTRA_SECRETS_MANAGER=DB
 
 # HashiCorp Vault Configuration (required when ARCHESTRA_SECRETS_MANAGER=Vault)
 ARCHESTRA_HASHICORP_VAULT_ADDR=http://localhost:8200
-# Authentication method: "TOKEN" (default) or "K8S"
+# Authentication method: "TOKEN" (default), "K8S", or "AWS"
 ARCHESTRA_HASHICORP_VAULT_AUTH_METHOD=TOKEN
 
 # Vault Token Authentication (ARCHESTRA_HASHICORP_VAULT_AUTH_METHOD=TOKEN)
@@ -122,3 +122,15 @@ ARCHESTRA_HASHICORP_VAULT_K8S_ROLE=
 ARCHESTRA_HASHICORP_VAULT_K8S_TOKEN_PATH=
 # Vault K8s auth mount point (default: kubernetes)
 ARCHESTRA_HASHICORP_VAULT_K8S_MOUNT_POINT=
+
+# Vault AWS IAM Authentication (ARCHESTRA_HASHICORP_VAULT_AUTH_METHOD=AWS)
+# Role bound to the AWS IAM principal (required for AWS auth)
+ARCHESTRA_HASHICORP_VAULT_AWS_ROLE=
+# Vault AWS auth mount point (default: aws)
+ARCHESTRA_HASHICORP_VAULT_AWS_MOUNT_POINT=
+# AWS region for STS signing (default: us-east-1)
+ARCHESTRA_HASHICORP_VAULT_AWS_REGION=
+# STS endpoint URL (default: https://sts.amazonaws.com)
+ARCHESTRA_HASHICORP_VAULT_AWS_STS_ENDPOINT=
+# Value for X-Vault-AWS-IAM-Server-ID header (optional, additional security)
+ARCHESTRA_HASHICORP_VAULT_AWS_IAM_SERVER_ID=
