--- a/platform/backend/package.json
+++ b/platform/backend/package.json
@@ -29,6 +29,8 @@
     "@ai-sdk/anthropic": "^2.0.47",
     "@anthropic-ai/sdk": "^0.71.0",
     "@anthropic-ai/tokenizer": "^0.0.4",
+    "@aws-crypto/sha256-js": "^5.2.0",
+    "@aws-sdk/credential-providers": "^3.943.0",
     "@better-auth/core": "1.4.4-beta.3",
     "@better-auth/sso": "1.4.4-beta.3",
     "@fastify/cors": "^11.1.0",
@@ -53,6 +55,7 @@
     "@sentry/opentelemetry": "^10.27.0",
     "@sentry/profiling-node": "^10.27.0",
     "@shared": "workspace:*",
+    "@smithy/signature-v4": "^5.3.5",
     "@toon-format/toon": "^2.0.0",
     "ai": "^5.0.101",
     "better-auth": "1.4.4-beta.3",
