ci: modify release-freeze workflow

--- a/.github/actions/release-freeze-review/action.yml
+++ b/.github/actions/release-freeze-review/action.yml
@@ -56,16 +56,22 @@ runs:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
         PR_NUMBER: ${{ steps.find-pr.outputs.pr_number }}
       run: |
-        # Get the bot's user ID to find its reviews
-        BOT_LOGIN=$(gh api user --jq '.login')
-        echo "Bot login: $BOT_LOGIN"
+        # Look for reviews containing our marker text to identify our bot's reviews
+        # This avoids needing to call /user which requires different permissions
+        FREEZE_MARKER="release freeze system"
 
-        # Get the latest review from this bot on this PR
-        LATEST_REVIEW_STATE=$(gh api "repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER/reviews" \
-          --jq "[.[] | select(.user.login == \"$BOT_LOGIN\")] | last | .state // \"NONE\"")
+        # Get all reviews and find the latest one with our marker
+        LATEST_REVIEW=$(gh api "repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER/reviews" \
+          --jq "[.[] | select(.body | contains(\"$FREEZE_MARKER\"))] | last")
 
-        echo "Latest review state from bot: $LATEST_REVIEW_STATE"
-        echo "review_state=$LATEST_REVIEW_STATE" >> "$GITHUB_OUTPUT"
+        if [ "$LATEST_REVIEW" = "null" ] || [ -z "$LATEST_REVIEW" ]; then
+          echo "No existing release freeze review found"
+          echo "review_state=NONE" >> "$GITHUB_OUTPUT"
+        else
+          REVIEW_STATE=$(echo "$LATEST_REVIEW" | jq -r '.state')
+          echo "Found existing release freeze review with state: $REVIEW_STATE"
+          echo "review_state=$REVIEW_STATE" >> "$GITHUB_OUTPUT"
+        fi
 
     - name: Request changes (freeze)
       if: inputs.action == 'freeze' && steps.find-pr.outputs.pr_number != '' && steps.check-review.outputs.review_state != 'CHANGES_REQUESTED'
@@ -110,7 +116,7 @@ runs:
         The release freeze has been lifted. This PR can now be merged.
 
         ---
-        *This approval was posted automatically when the release freeze was disabled.*"
+        *This approval was posted automatically by the release freeze system.*"
         echo "✅ Approved PR #$PR_NUMBER"
 
     - name: Skip unfreeze (already approved or no blocking review)
