fix: serviceAccount for MCP with extended permissions (#1539)
MCPs can now specify a `service_account` to use a privileged role in the
pod. The only such MCP for now is kubernetes, and the only supported
role is `operator`.

Related to https://github.com/archestra-ai/website/pull/288

--- a/platform/helm/archestra/values.yaml
+++ b/platform/helm/archestra/values.yaml
@@ -115,6 +115,14 @@ archestra:
         # Specifies whether RBAC resources should be created
         create: true
 
+      # RBAC configuration for MCP server pods that need Kubernetes API access
+      # Creates a dedicated service account with full operator permissions for K8s resources
+      # IMPORTANT: Only the Kubernetes MCP server uses this service account - all other MCP servers
+      # use the default service account with no permissions, maintaining proper isolation
+      mcpServerRbac:
+        # Specifies whether RBAC resources (ServiceAccount, ClusterRole, ClusterRoleBinding) should be created
+        create: true
+
   # Service configuration
   service:
     # Service type - ClusterIP, NodePort, or LoadBalancer
