chore: k8s mcp polish (#1611)
- Make ARCHESTRA_ORCHESTRATOR_MCP_K8S_SERVICE_ACCOUNT_NAME the only env
to control k8s-mcp SA name. It makes it easier to bring your own SA.
- Add documentation for the new environment variable in the deployment
guide

--- a/platform/helm/archestra/values.yaml
+++ b/platform/helm/archestra/values.yaml
@@ -153,7 +153,7 @@ archestra:
       # use the default service account with no permissions, maintaining proper isolation
       mcpServerRbac:
         # Specifies whether RBAC resources (ServiceAccount, Role, RoleBinding) should be created
-        create: false
+        create: true
 
   # Service configuration
   service:
