--- a/platform/.env.example
+++ b/platform/.env.example
@@ -20,6 +20,11 @@ ARCHESTRA_GEMINI_BASE_URL=https://generativelanguage.googleapis.com
 # ARCHESTRA_OLLAMA_BASE_URL=http://localhost:9092/ollama/v1
 # ARCHESTRA_CEREBRAS_BASE_URL=http://localhost:9092/cerebras/v1
 
+# Amazon Bedrock credentials
+# ARCHESTRA_BEDROCK_ACCESS_KEY_ID="AKIAXXX"
+# ARCHESTRA_BEDROCK_SECRET_ACCESS_KEY="XXX"
+# ARCHESTRA_BEDROCK_REGION=us-east-1
+
 # Public MCP catalog URL.
 # If you are making changes to the MCP catalog, point it to the port the archestra-ai/website listens on.
 # ARCHESTRA_MCP_CATALOG_API_BASE_URL=http://localhost:3001/mcp-catalog/api
