fix dependency issues and codegen files updated

--- a/platform/backend/package.json
+++ b/platform/backend/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsdown && pnpm run sentry:sourcemaps",
     "start": "NODE_ENV=production node --enable-source-maps dist/server.mjs",
-    "dev": "rm -rf dist && tsdown --watch",
+    "dev": "tsdown --watch",
     "dev:debug": "DEBUG=1 tsdown --watch",
     "test": "vitest",
     "lint": "biome check",
@@ -31,7 +31,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^3.0.9",
     "@ai-sdk/cerebras": "^2.0.5",
-    "@ai-sdk/cohere": "^0.1.8",
+    "@ai-sdk/cohere": "^3.0.8",
     "@ai-sdk/google": "^3.0.6",
     "@ai-sdk/openai": "^3.0.7",
     "@anthropic-ai/sdk": "^0.71.2",
