binary stream response

--- a/platform/backend/package.json
+++ b/platform/backend/package.json
@@ -66,7 +66,9 @@
     "@sentry/opentelemetry": "^10.32.1",
     "@sentry/profiling-node": "^10.32.1",
     "@shared": "workspace:*",
+    "@smithy/eventstream-codec": "^4.2.8",
     "@smithy/signature-v4": "^5.3.7",
+    "@smithy/util-utf8": "^4.2.0",
     "@toon-format/toon": "^2.1.0",
     "ai": "^6.0.22",
     "better-auth": "1.4.10",
