chore: revert unnecessary changes

--- a/platform/.env.example
+++ b/platform/.env.example
@@ -7,6 +7,8 @@ ARCHESTRA_OPENAI_BASE_URL=https://api.openai.com/v1
 ARCHESTRA_ANTHROPIC_BASE_URL=https://api.anthropic.com
 ARCHESTRA_GEMINI_BASE_URL=https://generativelanguage.googleapis.com
 ARCHESTRA_COHERE_BASE_URL=https://api.cohere.ai
+ARCHESTRA_ZHIPUAI_BASE_URL=https://api.zhipuai.cn/api/paas/v4
+ARCHESTRA_CEREBRAS_BASE_URL=https://api.cerebras.ai/v1
 # Ollama Base URL (uncomment if using Ollama)
 # ARCHESTRA_OLLAMA_BASE_URL=http://localhost:11434/v1
 # vLLM Base URL (uncomment if using vLLM)
@@ -19,6 +21,7 @@ ARCHESTRA_COHERE_BASE_URL=https://api.cohere.ai
 # ARCHESTRA_GEMINI_BASE_URL=http://localhost:9092/gemini
 # ARCHESTRA_VLLM_BASE_URL=http://localhost:9092/vllm/v1
 # ARCHESTRA_OLLAMA_BASE_URL=http://localhost:9092/ollama/v1
+# ARCHESTRA_ZHIPUAI_BASE_URL=http://localhost:9092/zhipuai/v4
 # ARCHESTRA_CEREBRAS_BASE_URL=http://localhost:9092/cerebras/v1
 # ARCHESTRA_COHERE_BASE_URL=http://localhost:9092/cohere/v2
 
