use api key instead of access key id and secret

--- a/platform/.env.example
+++ b/platform/.env.example
@@ -20,10 +20,10 @@ ARCHESTRA_GEMINI_BASE_URL=https://generativelanguage.googleapis.com
 # ARCHESTRA_OLLAMA_BASE_URL=http://localhost:9092/ollama/v1
 # ARCHESTRA_CEREBRAS_BASE_URL=http://localhost:9092/cerebras/v1
 
-# Amazon Bedrock credentials
-# ARCHESTRA_BEDROCK_ACCESS_KEY_ID="AKIAXXX"
-# ARCHESTRA_BEDROCK_SECRET_ACCESS_KEY="XXX"
-# ARCHESTRA_BEDROCK_REGION=us-east-1
+# Amazon Bedrock configuration
+# Base URL includes the region, e.g., https://bedrock-runtime.us-east-1.amazonaws.com
+# ARCHESTRA_BEDROCK_BASE_URL=https://bedrock-runtime.us-east-1.amazonaws.com
+# ARCHESTRA_BEDROCK_API_KEY=your-bedrock-access-token
 
 # Public MCP catalog URL.
 # If you are making changes to the MCP catalog, point it to the port the archestra-ai/website listens on.
