fix: correct Cohere V2 API endpoint path
The adapter was sending requests to ${baseUrl}/chat but Cohere V2 API
endpoint is at /v2/chat. This caused 400 errors when the base URL was
set without /v2 suffix (as documented in .env.example).

Changes:
- Adapter now sends to ${baseUrl}/v2/chat for both create and stream
- Config defaults changed from https://api.cohere.ai/v2 to
  https://api.cohere.ai to match documentation
- CI config updated for consistency

This makes URL construction consistent:
- Base URL: https://api.cohere.ai (without /v2)
- Chat: ${baseUrl}/v2/chat
- Models: ${baseUrl}/v2/models

--- a/.github/values-ci.yaml
+++ b/.github/values-ci.yaml
@@ -12,7 +12,7 @@ archestra:
     ARCHESTRA_OPENAI_BASE_URL: "http://e2e-tests-wiremock:8080/openai/v1"
     ARCHESTRA_ANTHROPIC_BASE_URL: "http://e2e-tests-wiremock:8080/anthropic"
     ARCHESTRA_GEMINI_BASE_URL: "http://e2e-tests-wiremock:8080/gemini"
-    ARCHESTRA_COHERE_BASE_URL: "http://e2e-tests-wiremock:8080/cohere/v2"
+    ARCHESTRA_COHERE_BASE_URL: "http://e2e-tests-wiremock:8080/cohere"
     ARCHESTRA_CEREBRAS_BASE_URL: "http://e2e-tests-wiremock:8080/cerebras/v1"
     ARCHESTRA_VLLM_BASE_URL: "http://e2e-tests-wiremock:8080/vllm/v1"
     ARCHESTRA_OLLAMA_BASE_URL: "http://e2e-tests-wiremock:8080/ollama/v1"
