--- a/.github/values-ci.yaml
+++ b/.github/values-ci.yaml
@@ -12,6 +12,7 @@ archestra:
     ARCHESTRA_OPENAI_BASE_URL: "http://e2e-tests-wiremock:8080/openai/v1"
     ARCHESTRA_ANTHROPIC_BASE_URL: "http://e2e-tests-wiremock:8080/anthropic"
     ARCHESTRA_GEMINI_BASE_URL: "http://e2e-tests-wiremock:8080/gemini"
+    ARCHESTRA_COHERE_BASE_URL: "http://e2e-tests-wiremock:8080/cohere"
     ARCHESTRA_CEREBRAS_BASE_URL: "http://e2e-tests-wiremock:8080/cerebras/v1"
     ARCHESTRA_VLLM_BASE_URL: "http://e2e-tests-wiremock:8080/vllm/v1"
     ARCHESTRA_OLLAMA_BASE_URL: "http://e2e-tests-wiremock:8080/ollama/v1"
@@ -20,6 +21,7 @@ archestra:
     ARCHESTRA_CHAT_OPENAI_API_KEY: test-key
     ARCHESTRA_CHAT_ANTHROPIC_API_KEY: test-key
     ARCHESTRA_CHAT_GEMINI_API_KEY: test-key
+    ARCHESTRA_CHAT_COHERE_API_KEY: test-key
     ARCHESTRA_CHAT_CEREBRAS_API_KEY: test-key
     ARCHESTRA_CHAT_VLLM_API_KEY: test-key
     ARCHESTRA_CHAT_OLLAMA_API_KEY: test-key
