--- a/platform/.env.example
+++ b/platform/.env.example
@@ -8,6 +8,8 @@ SUBDOMAIN=n8n
 ARCHESTRA_OPENAI_BASE_URL=https://api.openai.com/v1
 ARCHESTRA_ANTHROPIC_BASE_URL=https://api.anthropic.com
 ARCHESTRA_GEMINI_BASE_URL=https://generativelanguage.googleapis.com
+# Cohere Base URL (uses https://api.cohere.ai by default)
+ARCHESTRA_COHERE_BASE_URL=https://api.cohere.ai
 # Ollama Base URL (uncomment if using Ollama)
 # ARCHESTRA_OLLAMA_BASE_URL=http://localhost:11434/v1
 # vLLM Base URL (uncomment if using vLLM)
@@ -24,6 +26,7 @@ ARCHESTRA_GEMINI_BASE_URL=https://generativelanguage.googleapis.com
 # ARCHESTRA_OLLAMA_BASE_URL=http://localhost:9092/ollama/v1
 # ARCHESTRA_CEREBRAS_BASE_URL=http://localhost:9092/cerebras/v1
 # ARCHESTRA_ZHIPUAI_BASE_URL=http://localhost:9092/zhipuai/v4
+# ARCHESTRA_COHERE_BASE_URL=http://localhost:9092/cohere
 
 # Public MCP catalog URL.
 # If you are making changes to the MCP catalog, point it to the port the archestra-ai/website listens on.
