--- a/platform/backend/package.json
+++ b/platform/backend/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^3.0.14",
     "@ai-sdk/cerebras": "^2.0.13",
+    "@ai-sdk/cohere": "^3.0.8",
     "@ai-sdk/google": "^3.0.9",
     "@ai-sdk/openai": "^3.0.11",
     "@anthropic-ai/sdk": "^0.71.2",
