chore: add pnpm commit:check for faster git hooks (#2478)

--- a/platform/frontend/package.json
+++ b/platform/frontend/package.json
@@ -13,6 +13,7 @@
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "check:ci": "pnpm type-check && pnpm test && pnpm knip && biome ci",
+    "check:commit": "pnpm type-check && pnpm knip && biome ci",
     "knip": "knip"
   },
   "dependencies": {
