--- a/platform/turbo.json
+++ b/platform/turbo.json
@@ -26,6 +26,9 @@
     "check:ci": {
       "inputs": ["**/src/**/*.tsx", "**/src/**/*.ts", "./biome.json", "e2e-tests/**/*.ts", "shared/**/*.ts", "**/knip.config.ts", "**/package.json"]
     },
+    "check:commit": {
+      "inputs": ["**/src/**/*.tsx", "**/src/**/*.ts", "./biome.json", "e2e-tests/**/*.ts", "shared/**/*.ts", "**/knip.config.ts", "**/package.json"]
+    },
     "knip": {
       "inputs": ["**/src/**/*.tsx", "**/src/**/*.ts", "**/knip.config.ts", "**/package.json", "e2e-tests/**/*.ts", "shared/**/*.ts"]
     },
