--- a/platform/helm/archestra/templates/archestra-platform.yaml
+++ b/platform/helm/archestra/templates/archestra-platform.yaml
@@ -74,6 +74,9 @@ spec:
   {{- if not $.Values.archestra.horizontalPodAutoscaler.enabled }}
   replicas: {{ include "archestra-platform.blueGreen.replicaCount" (dict "root" $ "slot" $slot) }}
   {{- end }}
+  {{- with $.Values.archestra.minReadySeconds }}
+  minReadySeconds: {{ . }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "archestra-platform.selectorLabels" $ | nindent 6 }}
@@ -93,6 +96,9 @@ spec:
       {{- end }}
     spec:
       serviceAccountName: {{ include "archestra-platform.serviceAccountName" $ }}
+      {{- with $.Values.archestra.terminationGracePeriodSeconds }}
+      terminationGracePeriodSeconds: {{ . }}
+      {{- end }}
       initContainers:
         - name: wait-for-postgres
           image: busybox:1.36
@@ -152,6 +158,10 @@ spec:
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
+          {{- with $.Values.archestra.lifecycle }}
+          lifecycle:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- if and $.Values.archestra.orchestrator.kubernetes.kubeconfig.enabled $.Values.archestra.orchestrator.kubernetes.kubeconfig.secretName }}
           volumeMounts:
             - name: kubeconfig
@@ -186,6 +196,9 @@ spec:
   {{- if not .Values.archestra.horizontalPodAutoscaler.enabled }}
   replicas: {{ .Values.archestra.replicaCount }}
   {{- end }}
+  {{- with .Values.archestra.minReadySeconds }}
+  minReadySeconds: {{ . }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "archestra-platform.selectorLabels" . | nindent 6 }}
@@ -203,6 +216,9 @@ spec:
       {{- end }}
     spec:
       serviceAccountName: {{ include "archestra-platform.serviceAccountName" . }}
+      {{- with .Values.archestra.terminationGracePeriodSeconds }}
+      terminationGracePeriodSeconds: {{ . }}
+      {{- end }}
       # Init container to wait for PostgreSQL to be ready before starting the application
       # This prevents the application from crashing when PostgreSQL is still starting up
       # and the application tries to run database migrations (in which it assumes that the database is already ready)
@@ -270,6 +286,10 @@ spec:
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
+          {{- with .Values.archestra.lifecycle }}
+          lifecycle:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- if and .Values.archestra.orchestrator.kubernetes.kubeconfig.enabled .Values.archestra.orchestrator.kubernetes.kubeconfig.secretName }}
           volumeMounts:
             - name: kubeconfig
