--- a/platform/package.json
+++ b/platform/package.json
@@ -52,7 +52,8 @@
       "d3-path": "3.1.0",
       "hono": "4.11.7",
       "lodash": "4.17.23",
-      "lodash-es": "4.17.23"
+      "lodash-es": "4.17.23",
+      "fast-xml-parser": "5.3.4" 
     }
   },
   "packageManager": "pnpm@10.28.2"
