--- a/platform/helm/archestra/templates/archestra-platform.yaml
+++ b/platform/helm/archestra/templates/archestra-platform.yaml
@@ -77,16 +77,29 @@ spec:
       initContainers:
         - name: wait-for-postgres
           image: busybox:1.36
+          env:
+            {{- include "archestra-platform.env" . | nindent 12 }}
           command:
             - sh
             - -c
             - |
-              echo "Waiting for PostgreSQL to be ready..."
-              until nc -z {{ include "archestra-platform.postgresql.host" . }} {{ include "archestra-platform.postgresql.port" . }}; do
+              {{- if .Values.archestra.initContainers.waitForPostgres.enabled }}
+              # Parse host and port from ARCHESTRA_DATABASE_URL
+              # Format: postgresql://user:pass@host:port/database
+              DB_URL="${ARCHESTRA_DATABASE_URL#*@}"  # Remove prefix up to @
+              HOST_PORT="${DB_URL%%/*}"               # Remove /database suffix
+              HOST="${HOST_PORT%%:*}"                 # Extract host
+              PORT="${HOST_PORT##*:}"                 # Extract port
+
+              echo "Waiting for PostgreSQL at ${HOST}:${PORT}..."
+              until nc -z "${HOST}" "${PORT}"; do
                 echo "PostgreSQL is unavailable - sleeping"
                 sleep 1
               done
               echo "PostgreSQL is up - continuing"
+              {{- else }}
+              echo "Skipping PostgreSQL readiness check"
+              {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: {{ include "archestra-platform.image" . }}
