fix: fix bulding arm platform image (#2636)

--- a/platform/Dockerfile
+++ b/platform/Dockerfile
@@ -1,4 +1,4 @@
-# Build KinD from source with Go 1.25.6 to fix CVE-2025-61726
+# Build KinD from source with latest Go 1.25.x to fix CVE-2025-61726
 # (KinD v0.31.0 pre-built binaries use Go 1.25.5 which has the vulnerability)
 FROM alpine:3.23 AS kind-builder
 ARG TARGETARCH
@@ -6,7 +6,7 @@ RUN if [ "$TARGETARCH" != "amd64" ] && [ "$TARGETARCH" != "arm64" ]; then \
         echo "ERROR: Unsupported architecture: $TARGETARCH. KinD is only available for amd64 and arm64."; \
         exit 1; \
     fi
-RUN apk add --no-cache go=1.25.6-r0 git
+RUN apk add --no-cache 'go~=1.25' git
 RUN git clone --depth 1 --branch v0.31.0 https://github.com/kubernetes-sigs/kind.git /kind && \
     cd /kind && \
     CGO_ENABLED=0 GOOS=linux GOARCH=${TARGETARCH} go build -o /kind-binary .
@@ -139,7 +139,7 @@ RUN apk --no-cache upgrade && \
     rm -rf /tmp/*
 
 # Install KinD (Kubernetes in Docker) and docker-cli for embedded K8s cluster support
-# KinD binary is built from source in kind-builder stage with Go 1.25.6 (CVE-2025-61726 fix)
+# KinD binary is built from source in kind-builder to address CVE-2025-61726
 RUN apk add --no-cache docker-cli
 COPY --from=kind-builder /kind-binary /usr/local/bin/kind
 RUN chmod +x /usr/local/bin/kind
