--- a/platform/frontend/package.json
+++ b/platform/frontend/package.json
@@ -56,6 +56,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "elkjs": "^0.11.0",
+    "embla-carousel-react": "^8.6.0",
     "import-in-the-middle": "2.0.5",
     "lodash-es": "^4.17.23",
     "lucide-react": "^0.562.0",
@@ -65,6 +66,7 @@
     "next-runtime-env": "^3.3.0",
     "next-themes": "^0.4.6",
     "posthog-js": "^1.323.0",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
