--- a/.github/workflows/platform-linting-and-tests.yml
+++ b/.github/workflows/platform-linting-and-tests.yml
@@ -576,10 +576,129 @@ jobs:
           docker volume rm archestra-ci-postgres-data 2>/dev/null || true
           docker volume rm archestra-ci-app-data 2>/dev/null || true
 
+  # Vault K8s E2E tests - validates platform starts when DB URL is sourced from Vault via K8s auth
+  platform-vault-k8s-e2e-tests:
+    name: Platform E2E Tests (Vault K8s)
+    needs: [platform-e2e-build]
+    if: ${{ !cancelled() }}
+    runs-on: e2e-runner-16cpu
+    permissions:
+      contents: read
+      packages: read
+    steps:
+      - name: Checkout repository
+        if: ${{ inputs.should-skip-running-and-always-succeed != true }}
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+
+      - name: Setup environment
+        if: ${{ inputs.should-skip-running-and-always-succeed != true }}
+        uses: ./.github/actions/setup-env
+        with:
+          working-directory: ./platform
+
+      - name: Load platform image
+        id: load-platform-image
+        if: ${{ inputs.should-skip-running-and-always-succeed != true }}
+        uses: ./.github/actions/load-platform-image
+        with:
+          is-fork-pr: ${{ inputs.is-fork-pr }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install Kind cluster
+        if: ${{ inputs.should-skip-running-and-always-succeed != true }}
+        uses: helm/kind-action@92086f6be054225fa813e0a4b13787fc9088faab # v1.13.0
+        with:
+          config: .github/kind.yaml
+          cluster_name: archestra-ci-cluster
+          install_only: false
+
+      - name: Load Docker image into Kind
+        if: ${{ inputs.should-skip-running-and-always-succeed != true }}
+        env:
+          PLATFORM_IMAGE_TAG: ${{ steps.load-platform-image.outputs.image-tag }}
+        run: kind load docker-image "${PLATFORM_IMAGE_TAG}" --name archestra-ci-cluster
+
+      - name: Deploy e2e-tests Helm chart (Vault only, K8s auth enabled)
+        if: ${{ inputs.should-skip-running-and-always-succeed != true }}
+        run: |
+          helm install e2e-tests platform/helm/e2e-tests \
+            --set vault.enabled=true \
+            --set vault.k8sAuth.enabled=true \
+            --set vault.k8sAuth.boundServiceAccountName=archestra-platform \
+            --set vault.k8sAuth.boundServiceAccountNamespace=default \
+            --set wiremock.enabled=false \
+            --set keycloak.enabled=false
+
+      - name: Wait for Vault to be ready
+        if: ${{ inputs.should-skip-running-and-always-succeed != true }}
+        run: |
+          echo "Waiting for Vault pod to be ready..."
+          kubectl wait --for=condition=Ready pod/vault --timeout=120s
+          echo "Vault pod is ready"
+
+      - name: Deploy platform with Vault K8s values
+        if: ${{ inputs.should-skip-running-and-always-succeed != true }}
+        env:
+          PLATFORM_IMAGE_TAG: ${{ steps.load-platform-image.outputs.image-tag }}
+        run: |
+          helm install archestra-platform platform/helm/archestra \
+            --values .github/values-ci-vault-k8s.yaml \
+            --set "archestra.image=${PLATFORM_IMAGE_TAG}" \
+            --atomic --timeout=4m
+
+      - name: Wait for platform to be healthy
+        if: ${{ inputs.should-skip-running-and-always-succeed != true }}
+        run: |
+          echo "Waiting for platform pods to be ready..."
+          kubectl wait --for=condition=Ready pods -l app.kubernetes.io/name=archestra-platform --timeout=90s
+          echo "Platform pods are ready"
+
+          echo "Verifying backend is accessible..."
+          curl --retry 10 --retry-delay 2 --retry-connrefused http://localhost:9000/health || (echo "Backend not accessible" && exit 1)
+          echo "Backend is healthy"
+
+      - name: Run Vault K8s E2E tests
+        id: e2e
+        if: ${{ inputs.should-skip-running-and-always-succeed != true }}
+        uses: ./.github/actions/run-e2e-tests
+        with:
+          projects: vault-k8s
+
+      - name: Upload blob report
+        if: ${{ inputs.should-skip-running-and-always-succeed != true && !cancelled() }}
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
+        with:
+          name: blob-report-vault-k8s
+          path: platform/e2e-tests/blob-report/
+          retention-days: 1
+
+      - name: Show logs on failure
+        if: failure()
+        run: |
+          echo "=== Kubernetes Pods ==="
+          kubectl get pods -o wide
+
+          echo "=== Kubernetes Services ==="
+          kubectl get services
+
+          echo "=== Archestra Platform Logs ==="
+          kubectl logs -l app.kubernetes.io/name=archestra-platform --tail=200
+
+          echo "=== Vault Logs ==="
+          kubectl logs vault --tail=200 2>/dev/null || true
+
+          echo "=== PostgreSQL Logs ==="
+          kubectl logs -l app.kubernetes.io/name=postgresql --tail=200 2>/dev/null || true
+
+          echo "=== Describe Platform Pod ==="
+          kubectl describe pod -l app.kubernetes.io/name=archestra-platform
+
   # Merge all Playwright reports into a single HTML report
   platform-e2e-merge-reports:
     name: Merge E2E Test Reports
-    needs: [platform-e2e-tests, platform-quickstart-e2e-tests]
+    needs: [platform-e2e-tests, platform-quickstart-e2e-tests, platform-vault-k8s-e2e-tests]
     if: ${{ always() && !cancelled() && inputs.should-skip-running-and-always-succeed != true }}
     runs-on: ubuntu-latest
     permissions:
