--- a/platform/backend/package.json
+++ b/platform/backend/package.json
@@ -64,10 +64,13 @@
     "@microsoft/msgraph-sdk-users": "1.0.0-preview.77",
     "@modelcontextprotocol/sdk": "^1.26.0",
     "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/api-logs": "^0.211.0",
     "@opentelemetry/auto-instrumentations-node": "^0.69.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.211.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.211.0",
     "@opentelemetry/otlp-exporter-base": "^0.211.0",
     "@opentelemetry/resources": "^2.3.0",
+    "@opentelemetry/sdk-logs": "^0.211.0",
     "@opentelemetry/sdk-node": "^0.211.0",
     "@opentelemetry/sdk-trace-base": "^2.4.0",
     "@opentelemetry/semantic-conventions": "^1.38.0",
