--- a/platform/dev/grafana/datasources/datasources.yml
+++ b/platform/dev/grafana/datasources/datasources.yml
@@ -1,18 +1,37 @@
 apiVersion: 1
 
 datasources:
-  # Tempo data source for traces (running in docker-compose)
-  - name: Tempo
-    type: tempo
-    access: proxy
-    url: http://tempo:3200
-    isDefault: true
-    editable: true
-
   # Prometheus data source for metrics (running in docker-compose)
   - name: Prometheus
     type: prometheus
+    uid: prometheus
     access: proxy
     url: http://prometheus:9090
     isDefault: false
     editable: true
+
+  # Grafana Loki for log aggregation (running in docker-compose)
+  - name: Loki
+    type: loki
+    uid: loki
+    access: proxy
+    url: http://loki:3100
+    isDefault: false
+    editable: true
+
+  # Tempo data source for traces (running in docker-compose)
+  - name: Tempo
+    type: tempo
+    uid: tempo
+    access: proxy
+    url: http://tempo:3200
+    isDefault: true
+    editable: true
+    jsonData:
+      tracesToLogsV2:
+        datasourceUid: loki
+        filterByTraceID: true
+        filterBySpanID: false
+        tags:
+          - key: service.name
+            value: service_name
